--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name = "viewModel"
-            type = "com.hugo.mvvmsampleapplication.view.viewmodel.RepoViewModel" />
+            type = "com.hugo.mvvmsampleapplication.features.userdetails.RepoViewModel" />
     </data>
 
     <android.support.v7.widget.CardView
